without inline_formset crud operation developed

--- a/py37dj2/myDjangoProject/accounts/templates/accounts/customer.html
+++ b/py37dj2/myDjangoProject/accounts/templates/accounts/customer.html
@@ -10,7 +10,7 @@
 			<h5>Customer: {{customer.name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'create_order_page' customer.id %}">Place New Order</a>
 
 		</div>
 	</div>
@@ -75,8 +75,8 @@
 					<td>{{order.product.category}}</td>	
 					<td>{{order.date_created}}</td>	
 					<td>{{order.status}}</td>	
-					<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-					<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'update_order_page' order.id %}">Update</a></td>
+						<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order_page' order.id %}">Delete</a></td>
 
 				</tr>
 				{% endfor %}
