user role based authentication using django login-required decorator

--- a/py37dj2/myDjangoProject/accounts/templates/accounts/customer.html
+++ b/py37dj2/myDjangoProject/accounts/templates/accounts/customer.html
@@ -45,7 +45,7 @@
 	<div class="col-md">
 		<div class="card card-body">
 			<form method="get">
-
+			{{my_filter.form}}
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
 		</div>
