--- a/py37dj2/myDjangoProject/accounts/templates/accounts/main.html
+++ b/py37dj2/myDjangoProject/accounts/templates/accounts/main.html
@@ -21,7 +21,7 @@
 	</div>
 	<hr>
 	<div class="col">
-		<p>Developed by masbhanoman @2020</p>
+		<p style="font-size: 12px;">Developed by masbhanoman &copy 2020</p>
 	</div>
 	
 </body>
