--- a/py37dj2/myDjangoProject/accounts/templates/accounts/navbar.html
+++ b/py37dj2/myDjangoProject/accounts/templates/accounts/navbar.html
@@ -17,4 +17,7 @@
       </li>      
     </ul>
   </div>
+
+  <span style="font-size: 14px; color: #fff; margin-right: 2%">Hello,  {{ request.user }}</span> &nbsp
+  <span><a style="font-size: 14px; color: #fff; margin-right: 2%" href="{% url 'logout_page' %}">Logout</a></span>
 </nav>
