--- a/py37dj2/myDjangoProject/accounts/templates/accounts/order_form.html
+++ b/py37dj2/myDjangoProject/accounts/templates/accounts/order_form.html
@@ -9,7 +9,12 @@
 			<form method='POST' action="">
 				{% csrf_token %}
 
-				{{form}}
+				{{ formset.management_form }}
+				{% for form in formset %}
+					{{form}}
+					<hr>
+				{% endfor %}
+				
 				<input type="submit" name="Submit">	
 				
 			</form>	
@@ -18,4 +23,4 @@
 </div>
 
 
-{%endblock%}
+{% endblock %}
